--- a/index.html
+++ b/index.html
@@ -29,25 +29,26 @@
 <div id="myNav" class="overlay">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content">
-   <a href="#restaurant" onclick="closeNav()">Restaurant</a>
+   <a href="#restaurant" onclick="closeNav()">Restaurant & Bar</a>
    <a href="#supermarket" onclick="closeNav()">Supermarket</a>
    <a href="#fuel" onclick="closeNav()">Filling Station</a>
    <a href="#service" onclick="closeNav()">Service Center</a>
     <a href="#contact" onclick="closeNav()">Contact Us</a>
     <a href="#about" onclick="closeNav()">About Us</a>
+    <a href="#home" onclick="closeNav()"><i class="fas fa-home"></i></a>
   </div>
 </div>
-   
+
   <section id="home" class="hero"> 
    <div class="hero-content"> 
     <p>Your one-stop shop for a true cowboy experience.</p> 
 <a href="#about"><button style="color: burlywood";>More      <i class="fa fa-info-circle" aria-hidden="true"></i></button></a>
     <button class="orderbtn">Order<i class='fas fa-hamburger'></i></button>
    </div>
-   
+
   </section> 
   <section id="restaurant" class="section"> 
-   <h2>Restaurant</h2> 
+   <h2>Restaurant & Bar</h2> 
    <p>Saddle up and head to our <strong>Restaurant Upstairs</strong>, where the wild west meets modern comfort. 
     Here, you'll find an authentic cowboy bar that serves up ice-cold drinks, 
     perfect for quenching your thirst after a long day on the trail. 
@@ -106,7 +107,7 @@
     <img src="Service.jpeg">
    </div>
   </section> 
-   
+
   <section id="about" class="section"> 
    <h2>About Us</h2> 
    <p>The Dusty Saddle isn’t just a place—it’s a living, breathing slice of the wild west.
@@ -126,7 +127,7 @@
       <span><a href="#fuel"><i class="fa-solid fa-gas-pump" aria-hidden="true"></i></a></span>  |
       <span><a href="#service"><i class="fa fa-wrench" aria-hidden="true"></i></a></span> 
       </p><br>
-   
+
    <p>FIND US @<br> Cnr 88 Oklahoma Ave and Santa Fe Blvd, Blue Saddle Ranches. </p> 
   </section> 
   <section id="contact" class="section"> 
@@ -142,12 +143,12 @@
    </form> 
   </section> 
   <footer> 
-   <div class="footer-content"> 
+   <div id="footer" class="footer-content"> 
     <p>Contact Us: (123) 456-7890 | Email: info@dustysaddle.com</p> 
     <div class="social-icons"> 
-     <a style="padding-left:20px;" href="#home" class="fa fa-home" alt="Home"></a>
-     <a style="padding-left:20px;" href="#" class="fa fa-facebook" alt="Facebook"></a> 
-     <a style="padding-left:20px;" href="#" class="fa fa-twitter" alt="Twitter"></a> 
+     <a style="padding-right:20px;" href="#home" class="fa fa-home" alt="Home"></a>
+     <a style="padding-right:19px;" href="#" class="fa fa-facebook" alt="Facebook"></a> 
+     <a style="padding-left:1px;" href="#" class="fa fa-twitter" alt="Twitter"></a> 
      <a style="padding-left:20px;" href="#" class="fa fa-instagram" alt="Instagram"></a> 
     </div> 
     <p>© 2024 The Dusty Saddle. All rights reserved.</p> 
